--- a/Diplom/css/style.css
+++ b/Diplom/css/style.css
@@ -163,7 +163,7 @@ body {
     background-color: #b5b7ba;
     width: 495px;
     cursor: pointer;
-    height: 100px;
+    height: 130px;
 }
 
 .Way:hover {
@@ -226,4 +226,64 @@ body {
 .mosearchresult:hover {
     background-color: #5ba1d3;
     cursor: pointer;
+}
+
+.But, .detal {
+    background-color: #b5b7ba;
+    width: 100px;
+    cursor: pointer;
+    height: 20px;
+    border: 1px solid #ccc;
+    margin-left: 10px;
+    margin-right: 5px;
+    padding-left: 5px;
+}
+
+.But:hover, .detal:hover {
+    background-color: #5ba1d3; 
+}
+
+#first {
+    z-index: 3;
+}
+
+#second {
+    z-index: 2;
+}
+
+#third {
+    z-index: 1;
+}
+
+.WayTrans {
+    background-color: #b5b7ba;
+    width: 495px;
+    cursor: pointer;
+    height: 280px;
+}
+
+.WayTrans:hover {
+    background-color: #4d4d4d; 
+}
+
+.WayTrans:hover span{
+    color: #fff;
+}
+
+.signature{
+    display: flex; 
+    justify-content: flex-start;
+    font-size: 10px;
+    color: darkgreen; 
+}
+
+.c {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+}
+
+.Z {
+    display: flex; 
+    justify-content: flex-start;
 }
