--- a/Diplom/css/style_train.css
+++ b/Diplom/css/style_train.css
@@ -125,50 +125,6 @@ body {
     text-decoration: none;
 }
 
-/*#content #box {
-    background-color: #ffffff;
-    width: 1238px;
-    margin: 0 auto;
-    padding: 37px;
-}
-
-#content #box p {
-    color: #242424;
-    font-size: 24px;
-    font-weight: 100;
-    text-align: left;
-    margin-top: 37px;
-    margin-bottom: 30px;
-}
-
-#content #box input {
-    border: 1px solid #a0a0a0;
-    background-color: #f5f5f5;
-    width: 457px;
-    height: 34px;
-    padding-left: 10px;
-    font-size: 20px;
-    font-weight: 100;
-    margin-bottom: 12px;
-}
-
-#content #box a {
-    display: inline-block;
-    background-color: #8cbbd3;
-    clear: both;
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: 300;
-    text-align: center;
-    text-decoration: none;
-    margin-top: 30px;
-    padding: 11px 51px;
-}
-
-#content #box a:hover {
-    background-color: #5ba1d3;
-}*/
-
 #footer {
     background-color: #434445;
     min-width: 1280px;
@@ -214,7 +170,7 @@ body {
 
 .form_div {
     margin: 0;
-    padding: 0px 200px 5px 5px;
+    padding: 0px 140px 5px 5px;
     float: left;
 }
 
@@ -244,3 +200,29 @@ body {
 #Admin:hover {
     box-shadow: 0 0 5px rgba(0,0,0,0.3); /* Тень */
    }
+
+.c {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    width: 80px;
+}
+
+.signature{
+    display: flex; 
+    justify-content: flex-start;
+    font-size: 10px;
+    color: darkgreen; 
+}
+
+.But {
+    background-color: #b5b7ba;
+    width: 100px;
+    cursor: pointer;
+    height: 20px;
+    border: 1px solid #ccc;
+}
+
+.But:hover {
+    background-color: #5ba1d3; 
+}
